IBX-4060: Added nowrap to badges to avoid breaking line (#614)

--- a/src/bundle/Resources/public/scss/_badges.scss
+++ b/src/bundle/Resources/public/scss/_badges.scss
@@ -7,6 +7,7 @@
     font-weight: normal;
     border-radius: calculateRem(12px);
     background-color: $ibexa-color-light-500;
+    white-space: nowrap;
 
     &--primary {
         color: $ibexa-color-primary;
